--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FB9EC212423BCBD828B2D88138C61740
-ProjectName=Third Person BP Game Template
+ProjectName=Action Combat
+CopyrightNotice=Action Combat
+
